# fridon-ai

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  Dockerfile  EXAMPLES.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  init_pgvector.sql  langgraph.json  main.tf  nest-cli.json  package-lock.json  package.json  pgvector.dockerfile  pyproject.toml  settings.py  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  fridon_backend.yml  fridon_brain.yml  fridon_crones.yml
adapters/: blockchain.py
app/: __init__.py  containers.py  main.py  ram.py  schema.py  settings.py  studio.py
app/adapters/: adapter.py  blockchain.py  coins.py  discord.py
app/adapters/medias/: discord.py  schema.py
app/brain/: chain.py  chat.py  memory.py  retriever.py  router.py  schema.py  templates.py
app/community/helpers/: chains.py  utilities.py
app/community/plugins/: __init__.py
app/core/: plugins.py  registry.py  tools.py  utilities.py  utils.py
app/core/checkpoint/: __init__.py  postgres.py  utils.py
app/core/crons/: __init__.py  base.py  registry.py
app/core/graph/: __init__.py  agents.py  base.py  chains.py  models.py  prompts.py  routers.py  schema.py  states.py  tools.py  utils.py  workflows.py
app/core/plugins/: __init__.py  base.py  registry.py  schemas.py
app/core/workflows/: agents.py
app/score/: calculate_score.py  chain.py
app/services/: __init__.py  calculate_user_message_score_service.py  handle_front_message_service.py  process_user_message.py  process_user_message_service.py
app/utils/birdeye/: __init__.py  api.py  dataset.py  utils.py
app/utils/chronos/: __init__.py  pipeline.py  utils.py
app/utils/redis/: __init__.py  pool.py  pubsub.py
app/utils/timeseries/: __init__.py
apps/fridon-api/: .dockerignore  .env.example  .gitignore  Dockerfile  nest-cli.json  package.json  pgvector.dockerfile  tsconfig.json
apps/fridon-api/test/: app.e2e-spec.ts  jest-e2e.json
apps/fridon_backend/: .env.example  Dockerfile  package.json  tsconfig.json  webpack.config.js
apps/fridon_backend/prisma/: schema.prisma  seed.ts
apps/fridon_backend/src/: main.module.ts  main.ts
apps/fridon_brain/: .env.example  Dockerfile  __init__.py  containers.py  main.py
apps/fridon_brain/services/: __init__.py  calculate_user_message_score_service.py  process_user_message_service.py
apps/fridon_crones/: .env.example  Dockerfile  main.py
apps/playground/: main.py  parquet_datalake.ipynb
apps/studio/: __init__.py  main.py  settings.py
brain/: chat.py
data/: coin-description.json  coins-list.json  media.json
libs/common/src/: index.ts
libs/community/adapters/: mock_adapter.py  (+1 more)
libs/core/: README.md  module_utils.py  pyproject.toml
libs/core/crons/: __init__.py  base.py  registry.py
libs/core/fridonai_core/crons/: __init__.py  registry.py
libs/core/fridonai_core/graph/: __init__.py  agents.py  base.py  chains.py  models.py  prompts.py  routers.py  schema.py  states.py  tools.py  utils.py
libs/core/fridonai_core/plugins/: README.md  __init__.py  base.py  registry.py
libs/core/fridonai_core/plugins/tools/: __init__.py  base.py  response_dumper_base.py
libs/core/fridonai_core/plugins/utilities/: __init__.py  adapter_base.py  base.py  blockchain.py  llm.py  mock.py  remote.py
libs/core/graph/: __init__.py  agents.py  base.py  chains.py  models.py  prompts.py  routers.py  schema.py  states.py  tools.py  utils.py
libs/core/plugins/: README.md  __init__.py  base.py  registry.py  schemas.py
libs/core/plugins/tools/: __init__.py  base.py
libs/core/plugins/utilities/: __init__.py  base.py  blockchain.py  llm.py  mock.py  remote.py
libs/data_providers/: __init__.py  coin_price_providers.py  composite.py  token_providers.py
libs/repositories/: __init__.py  coins.py  coins_delta_lake_repository.py  delta.py  indicators.py  ohlcv.py  redis.py
libs/technical_analysis/: __init__.py  derivative_indicators.py  ta.py  visualization.py
playground/: coingecko.ipynb  ta_assistant.ipynb  test.ipynb  test.py  test_coins.py
prisma/: schema.prisma  seed.ts
scripts/: format-imports.sh  lint.sh  test.sh
services/: process_user_message.py
src/: main.module.ts  main.ts
src/auth/: auth.controller.ts
src/blockchain/: blockchain.controller.ts  blockchain.dto.ts  blockchain.module.ts  blockchain.service.ts
src/chat/: chat.controller.ts  chat.dto.ts  chat.module.ts  chat.repository.ts  chat.service.ts  leaderboard.controller.ts  leaderboard.service.ts
src/data-providers/: data-provider.controller.ts  data-provider.dto.ts  data-provider.module.ts  data-provider.service.ts  registry.ts
src/events/: events.gateway.ts  events.module.ts  events.service.ts
src/medias/: medias.module.ts  medias.service.ts
src/plugins/: plugins.controller.ts  plugins.dto.ts  plugins.module.ts  plugins.repository.ts  plugins.service.ts
src/user/: user.controller.ts  user.dto.ts  user.module.ts  user.service.ts
test/: jest-e2e.json
(+347 files in other folders)
